# esp32p4-catflapmonitor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.old
build-esp32p4/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  cmake_install.cmake  config.env  favicon.ico.gz.S  flasher_args.json  index.js.gz.S  kconfigs.in  ldgen_libraries  ldgen_libraries.in  loading.jpg.gz.S  project_description.json  x509_crt_bundle.S
build-port-esp32c3/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  cmake_install.cmake  config.env  flasher_args.json  index.css.gz.S  ldgen_libraries  ldgen_libraries.in  project_description.json  sdkconfig  x509_crt_bundle.S
build-port-esp32c5/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  cmake_install.cmake  config.env  flash_app_args  flash_args  flasher_args.json  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in  project_description.json  sdkconfig  x509_crt_bundle.S
build-port-esp32c6/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  cmake_install.cmake  config.env  flash_project_args  flasher_args.json  index.html.gz.S  kconfigs.in  ldgen_libraries  ldgen_libraries.in  project_description.json  sdkconfig  x509_crt_bundle.S
build-port-esp32s3/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  (+10 more)
components/catflapcam_video_common/: CMakeLists.txt  Kconfig.projbuild  README.md  catflapcam_encoder.c  catflapcam_init_video.c  idf_component.yml
components/catflapcam_video_common/include/: catflapcam_video_common.h
components/catflapcam_video_common/include/boards/customized/: catflapcam_video_common_board.h
main/: CMakeLists.txt  Kconfig.projbuild  catflapcam_http_server.c  catflapcam_storage.c  catflapcam_ultrasonic.c  catflapcam_webcam.c  catflapcam_wifi.c  idf_component.yml  main.c  uploader.c
main/include/: catflapcam_config.example.h  catflapcam_http_server.h  catflapcam_storage.h  catflapcam_ultrasonic.h  catflapcam_webcam.h  catflapcam_wifi.h  main.h  uploader.h
(+529 files in other folders)
